--- a/statistika/index.html
+++ b/statistika/index.html
@@ -1,6 +1,729 @@
 <doctype html>
-<head>
-</head>
-<body>
-    Hello statistika
-</body>
+<html>
+    <head>
+    </head>
+    <body>
+        <h1>СРЕДНЕМЕСЯЧНАЯ НОМИНАЛЬНАЯ НАЧИСЛЕННАЯ ЗАРАБОТНАЯ ПЛАТА РАБОТНИКОВ  ОРГАНИЗАЦИЙ ПО ВИДАМ ЭКОНОМИЧЕСКОЙ ДЕЯТЕЛЬНОСТИ В РОССИЙСКОЙ ФЕДЕРАЦИИ </h1>
+        <table>
+<tr>
+<td></td>
+<td>1995</td>
+<td>2000</td>
+<td>2001</td>
+<td>2002</td>
+<td>2003</td>
+<td>2004</td>
+<td>2005</td>
+<td>2006</td>
+<td>2007</td>
+<td>2008</td>
+<td>2009</td>
+<td>2010</td>
+<td>2011</td>
+<td>2012</td>
+<td>2013</td>
+<td>2014</td>
+<td>2015</td>
+</tr>
+<tr>
+<td>Вся экономика</td>
+<td>472,4</td>
+<td>2223,4</td>
+<td>3240,4</td>
+<td>4360,3</td>
+<td>5498,5</td>
+<td>6739,5</td>
+<td>8554,9</td>
+<td>10633,9</td>
+<td>13593,4</td>
+<td>17290,1</td>
+<td>18637,5</td>
+<td>20952,2</td>
+<td>23369,2</td>
+<td>26628,9</td>
+<td>29792</td>
+<td>32495,4</td>
+<td>34029,5</td>
+</tr>
+<tr>
+<td>Сельское хозяйство, охота и лесное хозяйство</td>
+<td>259,4</td>
+<td>985,1</td>
+<td>1434,6</td>
+<td>1876,4</td>
+<td>2339,8</td>
+<td>3015,4</td>
+<td>3646,2</td>
+<td>4568,7</td>
+<td>6143,8</td>
+<td>8474,8</td>
+<td>9619,2</td>
+<td>10668,1</td>
+<td>12464</td>
+<td>14129,4</td>
+<td>15724</td>
+<td>17723,7</td>
+<td>19721,1</td>
+</tr>
+<tr>
+<td>Рыболовство, рыбоводство</td>
+<td>746,2</td>
+<td>2845,6</td>
+<td>3839,3</td>
+<td>5031,3</td>
+<td>5444,5</td>
+<td>7084,9</td>
+<td>10233,5</td>
+<td>12310,8</td>
+<td>14797</td>
+<td>19498,9</td>
+<td>22913,5</td>
+<td>23781,9</td>
+<td>25939,9</td>
+<td>29201,4</td>
+<td>32437,3</td>
+<td>37061,9</td>
+<td>46675,6</td>
+</tr>
+<tr>
+<td>Добыча полезных ископаемых</td>
+<td>1067,2</td>
+<td>5940,2</td>
+<td>9099,2</td>
+<td>11080,9</td>
+<td>13912,4</td>
+<td>16841,7</td>
+<td>19726,9</td>
+<td>23145,2</td>
+<td>28107,5</td>
+<td>33206,1</td>
+<td>35363,4</td>
+<td>39895</td>
+<td>45132</td>
+<td>50400,6</td>
+<td>54161,2</td>
+<td>58959,3</td>
+<td>63695,3</td>
+</tr>
+<tr>
+<td>из нее:</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>добыча топливно-энергетических полезных ископаемых</td>
+<td>1211,9</td>
+<td>6985,1</td>
+<td>10905,4</td>
+<td>13080,3</td>
+<td>16135,5</td>
+<td>19903,3</td>
+<td>23455,9</td>
+<td>27614,5</td>
+<td>33275,5</td>
+<td>39051,3</td>
+<td>41568,3</td>
+<td>46271,2</td>
+<td>51587,9</td>
+<td>57209,7</td>
+<td>61084,1</td>
+<td>66779,5</td>
+<td>71417,6</td>
+</tr>
+<tr>
+<td>добыча полезных ископаемых, кроме топливно-энергетических</td>
+<td>752,6</td>
+<td>3999,5</td>
+<td>5386,5</td>
+<td>7035</td>
+<td>9395,7</td>
+<td>10876,6</td>
+<td>13176</td>
+<td>15363,7</td>
+<td>19092,7</td>
+<td>22937,4</td>
+<td>24064,1</td>
+<td>28305,8</td>
+<td>33580,1</td>
+<td>38267,3</td>
+<td>41754,4</td>
+<td>44441,4</td>
+<td>48723,7</td>
+</tr>
+<tr>
+<td>Обрабатывающие производства</td>
+<td>453,8</td>
+<td>2365,2</td>
+<td>3446,6</td>
+<td>4439,1</td>
+<td>5603,4</td>
+<td>6848,9</td>
+<td>8420,9</td>
+<td>10198,5</td>
+<td>12878,7</td>
+<td>16049,9</td>
+<td>16583,1</td>
+<td>19078</td>
+<td>21780,8</td>
+<td>24511,7</td>
+<td>27044,5</td>
+<td>29510,5</td>
+<td>31910,2</td>
+</tr>
+<tr>
+<td>из них:</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>производство пищевых продуктов, включая напитки, и табака</td>
+<td>492,6</td>
+<td>2183,4</td>
+<td>3126,7</td>
+<td>4065,9</td>
+<td>5026,7</td>
+<td>6065,8</td>
+<td>7303,8</td>
+<td>8806,7</td>
+<td>11069,2</td>
+<td>13930,4</td>
+<td>15653,1</td>
+<td>17316,9</td>
+<td>19094</td>
+<td>21104,8</td>
+<td>23326,9</td>
+<td>25081,3</td>
+<td>26792,8</td>
+</tr>
+<tr>
+<td>текстильное и швейное производство</td>
+<td>240,8</td>
+<td>1214,8</td>
+<td>1764,8</td>
+<td>2241,7</td>
+<td>2803</td>
+<td>3356,5</td>
+<td>3986</td>
+<td>4964,3</td>
+<td>6589,5</td>
+<td>8453,6</td>
+<td>9020,5</td>
+<td>10302,1</td>
+<td>11004,4</td>
+<td>12095,4</td>
+<td>13488,5</td>
+<td>14453,1</td>
+<td>15757,6</td>
+</tr>
+<tr>
+<td>производство кожи, изделий из кожи и производство обуви</td>
+<td>277,1</td>
+<td>1347,8</td>
+<td>1986,1</td>
+<td>2621,1</td>
+<td>3230</td>
+<td>3774,7</td>
+<td>4695,3</td>
+<td>5649,1</td>
+<td>7537</td>
+<td>9522,3</td>
+<td>10073,2</td>
+<td>11345,8</td>
+<td>12350,9</td>
+<td>13135,7</td>
+<td>14725,1</td>
+<td>16118,6</td>
+<td>17796,3</td>
+</tr>
+<tr>
+<td>обработка древесины и производство изделий из дерева</td>
+<td>390,9</td>
+<td>1739,1</td>
+<td>2310,3</td>
+<td>2980,2</td>
+<td>3754,8</td>
+<td>4614,6</td>
+<td>5895,4</td>
+<td>6950,4</td>
+<td>8815,6</td>
+<td>11301,1</td>
+<td>10947,2</td>
+<td>12720,4</td>
+<td>13941,9</td>
+<td>15248,3</td>
+<td>16949,7</td>
+<td>18627,6</td>
+<td>20365,3</td>
+</tr>
+<tr>
+<td>целлюлозно-бумажное производство; издательская и полиграфическая деятельность</td>
+<td>569,7</td>
+<td>2736,6</td>
+<td>4309</td>
+<td>5480,2</td>
+<td>6848,4</td>
+<td>7892</td>
+<td>9418,6</td>
+<td>10923,6</td>
+<td>13792</td>
+<td>17631,7</td>
+<td>17707,1</td>
+<td>20104,3</td>
+<td>23710,2</td>
+<td>26311,6</td>
+<td>28504,9</td>
+<td>29222</td>
+<td>30148,4</td>
+</tr>
+<tr>
+<td>производство кокса и нефтепродуктов</td>
+<td>810,9</td>
+<td>4916,3</td>
+<td>7012,4</td>
+<td>9625,3</td>
+<td>11879</td>
+<td>13729,3</td>
+<td>19397,1</td>
+<td>22319,6</td>
+<td>28565</td>
+<td>34912,5</td>
+<td>37963,7</td>
+<td>41563,4</td>
+<td>48462,6</td>
+<td>59195</td>
+<td>64760,1</td>
+<td>75516,9</td>
+<td>81605,2</td>
+</tr>
+<tr>
+<td>химическое производство</td>
+<td>517,6</td>
+<td>2754,6</td>
+<td>3901,8</td>
+<td>4899,5</td>
+<td>6154,8</td>
+<td>7682,7</td>
+<td>9928,3</td>
+<td>11599,3</td>
+<td>14615,9</td>
+<td>18219,9</td>
+<td>19428,7</td>
+<td>22228,7</td>
+<td>25582,7</td>
+<td>28900,5</td>
+<td>32513,5</td>
+<td>36218,2</td>
+<td>39342,4</td>
+</tr>
+<tr>
+<td>производство резиновых и пластмассовых изделий</td>
+<td>424,6</td>
+<td>2140,4</td>
+<td>3032,2</td>
+<td>3957,1</td>
+<td>4950,7</td>
+<td>5956,8</td>
+<td>6879,2</td>
+<td>8767,7</td>
+<td>11082,6</td>
+<td>13464</td>
+<td>13850,6</td>
+<td>15766,4</td>
+<td>17713,3</td>
+<td>19758,3</td>
+<td>21599,3</td>
+<td>23270,3</td>
+<td>25005,5</td>
+</tr>
+<tr>
+<td>производство прочих неметаллических минеральных продуктов</td>
+<td>489,7</td>
+<td>2182</td>
+<td>3220</td>
+<td>4134,2</td>
+<td>5207,8</td>
+<td>6422,4</td>
+<td>7921,8</td>
+<td>9983,8</td>
+<td>13193,3</td>
+<td>16371,8</td>
+<td>16053,7</td>
+<td>18117,5</td>
+<td>20518</td>
+<td>23180,4</td>
+<td>25458,3</td>
+<td>27335,4</td>
+<td>28051,3</td>
+</tr>
+<tr>
+<td>металлургическое производство и производство готовых металлических изделий</td>
+<td>687,9</td>
+<td>3854,9</td>
+<td>5242,4</td>
+<td>6285,2</td>
+<td>7731,2</td>
+<td>9196,8</td>
+<td>10260,7</td>
+<td>12001,5</td>
+<td>14990,7</td>
+<td>18171,1</td>
+<td>17946,3</td>
+<td>21152,1</td>
+<td>23887,1</td>
+<td>26564,2</td>
+<td>28519,8</td>
+<td>30436,5</td>
+<td>33059,1</td>
+</tr>
+<tr>
+<td>производство машин и оборудования</td>
+<td>377,9</td>
+<td>1975,3</td>
+<td>3073,5</td>
+<td>4066,6</td>
+<td>5169,7</td>
+<td>6514,2</td>
+<td>8379,8</td>
+<td>10418</td>
+<td>13479,8</td>
+<td>16940</td>
+<td>17009,6</td>
+<td>20102,5</td>
+<td>22777,9</td>
+<td>25671</td>
+<td>28230,7</td>
+<td>30267,7</td>
+<td>32246,2</td>
+</tr>
+<tr>
+<td>производство электрооборудования, электронного и оптического оборудования</td>
+<td>370,7</td>
+<td>2003,6</td>
+<td>2998,8</td>
+<td>3815,7</td>
+<td>5108,5</td>
+<td>6431,7</td>
+<td>8218,8</td>
+<td>10289,8</td>
+<td>13114,4</td>
+<td>16608,9</td>
+<td>17360,4</td>
+<td>20177,8</td>
+<td>23375,3</td>
+<td>26353,8</td>
+<td>29354,1</td>
+<td>32778,5</td>
+<td>36765,2</td>
+</tr>
+<tr>
+<td>производство транспортных средств и оборудования</td>
+<td>493,6</td>
+<td>2454,1</td>
+<td>3664,6</td>
+<td>5099,9</td>
+<td>6365</td>
+<td>7828</td>
+<td>9377,4</td>
+<td>11431,2</td>
+<td>14013,6</td>
+<td>17330,9</td>
+<td>17367,8</td>
+<td>20766,4</td>
+<td>24503,1</td>
+<td>27659,5</td>
+<td>30724,4</td>
+<td>33736,1</td>
+<td>36139,4</td>
+</tr>
+<tr>
+<td>прочие производства</td>
+<td>373,8</td>
+<td>2053,2</td>
+<td>2738,2</td>
+<td>3279,3</td>
+<td>4045,2</td>
+<td>5182</td>
+<td>6386,8</td>
+<td>8278</td>
+<td>10114,1</td>
+<td>12593,4</td>
+<td>12543,1</td>
+<td>13674,2</td>
+<td>15573,3</td>
+<td>17146</td>
+<td>18736,3</td>
+<td>19710,9</td>
+<td>21533,3</td>
+</tr>
+<tr>
+<td>Производство и распределение электроэнергии, газа и воды</td>
+<td>786,9</td>
+<td>3156,5</td>
+<td>4434,8</td>
+<td>5869,4</td>
+<td>7235,3</td>
+<td>8641,8</td>
+<td>10637,3</td>
+<td>12827,5</td>
+<td>15587,3</td>
+<td>19057,4</td>
+<td>21554,2</td>
+<td>24156,4</td>
+<td>26965,5</td>
+<td>29437,1</td>
+<td>32230,5</td>
+<td>34807,9</td>
+<td>36864,8</td>
+</tr>
+<tr>
+<td>Строительство</td>
+<td>587,3</td>
+<td>2639,8</td>
+<td>3859,3</td>
+<td>4806,9</td>
+<td>6176,7</td>
+<td>7304,7</td>
+<td>9042,8</td>
+<td>10869,2</td>
+<td>14333,4</td>
+<td>18574</td>
+<td>18122,2</td>
+<td>21171,7</td>
+<td>23682</td>
+<td>25950,6</td>
+<td>27701,4</td>
+<td>29354,3</td>
+<td>29960</td>
+</tr>
+<tr>
+<td>Оптовая и розничная торговля; ремонт автотранспортных средств, мотоциклов, бытовых изделий и предметов личного пользования</td>
+<td>357,6</td>
+<td>1584,5</td>
+<td>2294,9</td>
+<td>3068,9</td>
+<td>3974,2</td>
+<td>4906,2</td>
+<td>6552,1</td>
+<td>8234,9</td>
+<td>11476,3</td>
+<td>14927,4</td>
+<td>15958,6</td>
+<td>18405,9</td>
+<td>19613,2</td>
+<td>21633,8</td>
+<td>23167,8</td>
+<td>25600,9</td>
+<td>26947,4</td>
+</tr>
+<tr>
+<td>Гостиницы и рестораны</td>
+<td>325,3</td>
+<td>1640</td>
+<td>2403,6</td>
+<td>3039,3</td>
+<td>3966,7</td>
+<td>4737,3</td>
+<td>6033,4</td>
+<td>7521,7</td>
+<td>9339</td>
+<td>11536,2</td>
+<td>12469,6</td>
+<td>13465,8</td>
+<td>14692,5</td>
+<td>16631,1</td>
+<td>18304,4</td>
+<td>19759,3</td>
+<td>20625,8</td>
+</tr>
+<tr>
+<td>Транспорт и связь</td>
+<td>702,9</td>
+<td>3220,2</td>
+<td>4304,2</td>
+<td>5851,5</td>
+<td>7471,3</td>
+<td>9319,9</td>
+<td>11351,1</td>
+<td>13389,9</td>
+<td>16452,3</td>
+<td>20760,8</td>
+<td>22400,5</td>
+<td>25589,9</td>
+<td>28608,5</td>
+<td>31444,1</td>
+<td>34575,7</td>
+<td>37010,5</td>
+<td>38982,2</td>
+</tr>
+<tr>
+<td>из них связь</td>
+<td>586,2</td>
+<td>2879,2</td>
+<td>4131,2</td>
+<td>5661,5</td>
+<td>7304,2</td>
+<td>8974,2</td>
+<td>11389,1</td>
+<td>13220,3</td>
+<td>16042,6</td>
+<td>19918,1</td>
+<td>20923,1</td>
+<td>24275</td>
+<td>26995</td>
+<td>28700,9</td>
+<td>31346,4</td>
+<td>33704,8</td>
+<td>34958</td>
+</tr>
+<tr>
+<td>Финансовая деятельность</td>
+<td>755,2</td>
+<td>5232,2</td>
+<td>8885,2</td>
+<td>13245,9</td>
+<td>15561,2</td>
+<td>17383,8</td>
+<td>22463,5</td>
+<td>27885,5</td>
+<td>34879,8</td>
+<td>41871,8</td>
+<td>42372,9</td>
+<td>50120</td>
+<td>55788,9</td>
+<td>58999,2</td>
+<td>63333</td>
+<td>68564,5</td>
+<td>70087,7</td>
+</tr>
+<tr>
+<td>Операции с недвижимым имуществом, аренда и предоставление услуг</td>
+<td>416,2</td>
+<td>2456,7</td>
+<td>3545,6</td>
+<td>4677,1</td>
+<td>6196,3</td>
+<td>7795,4</td>
+<td>10236,8</td>
+<td>12763,2</td>
+<td>16641,6</td>
+<td>21275</td>
+<td>22609,7</td>
+<td>25623,4</td>
+<td>28239,3</td>
+<td>30925,8</td>
+<td>33846,3</td>
+<td>37559,3</td>
+<td>39814,9</td>
+</tr>
+<tr>
+<td>Государственное управление и обеспечение военной безопасности; социальное страхование</td>
+<td>517</td>
+<td>2712,1</td>
+<td>3754,9</td>
+<td>5200,4</td>
+<td>6913,8</td>
+<td>7898,6</td>
+<td>10958,5</td>
+<td>13477,3</td>
+<td>16896,3</td>
+<td>21344,1</td>
+<td>23960</td>
+<td>25120,8</td>
+<td>27755,5</td>
+<td>35701,4</td>
+<td>40448,7</td>
+<td>42659,1</td>
+<td>41916,2</td>
+</tr>
+<tr>
+<td>Образование</td>
+<td>309,3</td>
+<td>1240,2</td>
+<td>1833</td>
+<td>2927,3</td>
+<td>3386,6</td>
+<td>4203,4</td>
+<td>5429,7</td>
+<td>6983,3</td>
+<td>8778,3</td>
+<td>11316,8</td>
+<td>13293,6</td>
+<td>14075,2</td>
+<td>15809,1</td>
+<td>18995,3</td>
+<td>23457,9</td>
+<td>25861,7</td>
+<td>26927,8</td>
+</tr>
+<tr>
+<td>Здравоохранение и предоставление социальных услуг</td>
+<td>345</td>
+<td>1333,3</td>
+<td>1959,9</td>
+<td>3141,3</td>
+<td>3662,6</td>
+<td>4612</td>
+<td>5905,6</td>
+<td>8059,9</td>
+<td>10036,6</td>
+<td>13048,6</td>
+<td>14819,5</td>
+<td>15723,8</td>
+<td>17544,5</td>
+<td>20640,7</td>
+<td>24438,6</td>
+<td>27068,4</td>
+<td>28179</td>
+</tr>
+<tr>
+<td>Предоставление прочих коммунальных, социальных и персональных услуг</td>
+<td>470,7</td>
+<td>1548</td>
+<td>2311,7</td>
+<td>3183,1</td>
+<td>3920,3</td>
+<td>4822,7</td>
+<td>6291</td>
+<td>7996,4</td>
+<td>10392,2</td>
+<td>13538,6</td>
+<td>15070</td>
+<td>16371,4</td>
+<td>18200,3</td>
+<td>20984,5</td>
+<td>24739,9</td>
+<td>27876,4</td>
+<td>30072,4</td>
+</tr>
+        </table>
+    </body>
