--- a/matpraktika/index.html
+++ b/matpraktika/index.html
@@ -14,9 +14,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script defer="" src="main.dart.js"></script>
+    <script defer="" src="/matpraktika/main.dart.js"></script>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/matpraktika/styles.css">
   </head>
   <body>
     <my-app>Loading...</my-app>
