--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="Записки Java программиста" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/about/","description":"Блог о разработке приложений баз данных","name":"Записки Java программиста","@type":"WebSite","headline":"Обо мне","@context":"http://schema.org"}</script>
+{"url":"http://localhost:4000/about/","description":"Блог о разработке приложений баз данных","name":"Записки Java программиста","headline":"Обо мне","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Записки Java программиста" /></head>
 <body><header class="site-header" role="banner">
