--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Блог о разработке web админок, CRM-ок и прочего." />
 <meta property="og:description" content="Блог о разработке web админок, CRM-ок и прочего." />
-<link rel="canonical" href="http://localhost:4000/404.html" />
-<meta property="og:url" content="http://localhost:4000/404.html" />
+<link rel="canonical" href="http://yamakarov.ru/404.html" />
+<meta property="og:url" content="http://yamakarov.ru/404.html" />
 <meta property="og:site_name" content="Записки Java программиста" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/404.html","description":"Блог о разработке web админок, CRM-ок и прочего.","headline":"Записки Java программиста","@type":"WebPage","@context":"http://schema.org"}</script>
+{"url":"http://yamakarov.ru/404.html","description":"Блог о разработке web админок, CRM-ок и прочего.","headline":"Записки Java программиста","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Записки Java программиста" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://yamakarov.ru/feed.xml" title="Записки Java программиста" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Записки Java программиста</a><nav class="site-nav">
