--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Блог о разработке web админок, CRM-ок и прочего." />
 <meta property="og:description" content="Блог о разработке web админок, CRM-ок и прочего." />
-<link rel="canonical" href="http://localhost:4000/about/" />
-<meta property="og:url" content="http://localhost:4000/about/" />
+<link rel="canonical" href="http://yamakarov.ru/about/" />
+<meta property="og:url" content="http://yamakarov.ru/about/" />
 <meta property="og:site_name" content="Записки Java программиста" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/about/","description":"Блог о разработке web админок, CRM-ок и прочего.","name":"Записки Java программиста","headline":"Обо мне","@type":"WebSite","@context":"http://schema.org"}</script>
+{"url":"http://yamakarov.ru/about/","description":"Блог о разработке web админок, CRM-ок и прочего.","name":"Записки Java программиста","headline":"Обо мне","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Записки Java программиста" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://yamakarov.ru/feed.xml" title="Записки Java программиста" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Записки Java программиста</a><nav class="site-nav">
