--- a/matpraktika/index.html
+++ b/matpraktika/index.html
@@ -10,13 +10,13 @@
         }());
     </script>
 
-    <title>matpraktika</title>
+    <title>MatPraktika - задачки на устный счёт</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script defer="" src="/matpraktika/main.dart.js"></script>
+    <script defer="" src="main.dart.js"></script>
     
-    <link rel="stylesheet" href="/matpraktika/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <my-app>Loading...</my-app>
